--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,27 +18,30 @@
         </div>
       </nav>
     </div>
-    <footer>
-      <div class="form">
-        <form action="">
-          <input type="text" class="i-text">
-          <input type="submit" class="b-form">
-        </form>
+    <div class="footer">
+      <div class="box">
+        <div class="form">
+          <p class="r-up">Get Release Updates</p>
+          <form action="">
+            <input type="text" class="i-text">
+            <input type="submit" class="b-form">
+          </form>
+        </div>
+        <div class="r-update">
+          <p class="p-title">Customer Service</p>
+          <p>Track your order</p>
+          <p>FAQ</p>
+          <p>Delivery and Returns</p>
+          <p>Contact us</p>
+        </div>
+        <div class="about">
+          <p class="p-title">About Splizzy</p>
+          <p>Our history</p>
+          <p>jobs</p>
+        </div>
+        <p class="text">2021 powered and designed by Michael Kirkaldy</p>
       </div>
-      <div class="r-update">
-        <p class="p-title">Customer Service</p>
-        <p>Track your order</p>
-        <p>FAQ</p>
-        <p>Delivery and Returns</p>
-        <p>Contact us</p>
-      </div>
-      <div class="about">
-        <p class="p-title">About Splizzy</p>
-        <p>Our history</p>
-        <p>jobs</p>
-      </div>
-      <p class="text">2021 powered and designed by Michael Kirkaldy</p>
-    </footer>
+   </div>
   </div>
 </body>
 </html>
