--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,8 @@
-<p>cart works!</p>
+
+<div class="container">
+  <p>Your cart is empty</p>
+  <button type="button" class="btn btn-secondary btn-lg">Continue Shopping</button>
+</div>
+
+
+
