style login and register page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -134,3 +134,16 @@ p {
 .box {
   text-align: center;
 }
+
+.far {
+  margin-right: 25px;
+  color: black;
+}
+
+.fas {
+  color: black;
+}
+
+.link-s {
+  margin-right: 1900px;
+}
