--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <title>Splizzy</title>
 </head>
 <body>
@@ -12,9 +13,9 @@
           <a class="navbar-brand" href="home">Splizzy</a>
             <div class="navbar-nav">
               <a class="nav-link" aria-current="page" href="#">Shop Sneakers</a>
-              <a class="nav-link" href="#">Releases</a>
-              <a routerLink="login"><i class="bi bi-person"></i></a>
-              <a routerLink="cart"><i class="bi bi-bag"></i></a>
+              <a class="nav-link link-s" href="#">Releases</a>
+              <a routerLink="login"><i class="far fa-user fa-2x"></i></a>
+              <a routerLink="cart"><i class="fas fa-shopping-bag fa-2x"></i></a>
             </div>
         </div>
       </nav>
