--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,8 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="home">Splizzy</a>
             <div class="navbar-nav">
-              <a class="nav-link" aria-current="page" href="#">Shop Sneakers</a>
-              <a class="nav-link link-s" href="#">Releases</a>
+              <a class="nav-link" aria-current="page" href="shop">Shop Sneakers</a>
+              <a class="nav-link link-s link-r" href="releases">Releases</a>
               <a routerLink="login"><i class="far fa-user fa-2x"></i></a>
               <a routerLink="cart"><i class="fas fa-shopping-bag fa-2x"></i></a>
             </div>
