--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,1 +1,50 @@
-<p>shop works!</p>
+
+<div class="wrapper">
+  <div class="opt">
+    <p class="shoe-i">No. of items found</p>
+    <hr>
+    <h4>Brand</h4>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+      <label class="form-check-label" for="flexCheckDefault">
+        Nike
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+      <label class="form-check-label" for="flexCheckChecked">
+        Adidas
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+      <label class="form-check-label" for="flexCheckChecked">
+        Puma
+      </label>
+    </div>
+    <hr>
+    <h4>Price</h4>
+    <hr>
+    <h4>Size</h4>
+  </div>
+  <div class="shoe-list">
+    <div class="shoe">
+      <a href="details">
+        <img src="https://cdn.flightclub.com/3500/TEMPLATE/253215/1.jpg" alt="">
+        <p class="stats">Nike</p>
+        <p class="stats">Dunk Low 'black White'</p>
+        <p class="stats">$275+</p>
+      </a>
+    </div>
+    <div class="shoe">
+      <a href="details">
+        <img src="https://cdn.flightclub.com/3500/TEMPLATE/135278/1.jpg" alt="">
+        <p class="stats">Nike</p>
+        <p class="stats">Air Jordan 1 Retro OG 'Pine Green 2.0'</p>
+        <p class="stats">$240+</p>
+      </a>
+    </div>
+  </div>
+</div>
+
+
