--- a/public/src/app/details/details.component.css
+++ b/public/src/app/details/details.component.css
@@ -1,5 +1,4 @@
 .container {
-  background-color: blue;
   width: 100%;
   height: 100%;
   padding-right: 15px;
@@ -27,4 +26,15 @@
   height: 75px;
   width: 80px;
   padding: 15px;
+}
+
+.shoe-d {
+  display: inline-block;
+  margin-top: 105px;
+}
+
+.shoe-img {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 50px;
 }
